src/main/java/oo/solid/dip/sample/bad/Carro.java
package oo.solid.dip.sample.bad;

public class Carro {
    public String getEspecificacoes() {
        return ""; // especificacoes do carro
    }
}
